LPS-108246 BuildRest
