# modules/apps/headless/headless-admin-workflow/headless-admin-workflow-impl/src/main/java/com/liferay/headless/admin/workflow/internal/resource/v1_0/WorkflowTaskResourceImpl.java
@@ -20,6 +20,7 @@ import com.liferay.headless.admin.workflow.dto.v1_0.WorkflowTask;
 import com.liferay.headless.admin.workflow.dto.v1_0.WorkflowTaskAssignToMe;
 import com.liferay.headless.admin.workflow.dto.v1_0.WorkflowTaskAssignToRole;
 import com.liferay.headless.admin.workflow.dto.v1_0.WorkflowTaskAssignToUser;
+import com.liferay.headless.admin.workflow.dto.v1_0.WorkflowTasksBulkSelection;
 import com.liferay.headless.admin.workflow.internal.dto.v1_0.util.CreatorUtil;
 import com.liferay.headless.admin.workflow.internal.dto.v1_0.util.ObjectReviewedUtil;
 import com.liferay.headless.admin.workflow.internal.dto.v1_0.util.RoleUtil;
@@ -47,6 +48,8 @@ import java.util.List;
 import org.osgi.service.component.annotations.Component;
 import org.osgi.service.component.annotations.Reference;
 import org.osgi.service.component.annotations.ServiceScope;
+
+import javax.ws.rs.core.Context;
 
 /**
  * @author Javier Gamarra
@@ -217,18 +220,14 @@ public class WorkflowTaskResourceImpl extends BaseWorkflowTaskResourceImpl {
 	}
 
 	@Override
-	public Page<WorkflowTask> getWorkflowTasksPage(
-			Boolean andOperator, Long[] assetPrimaryKeys, String assetTitle,
-			String[] assetTypes, Long[] assigneeIds, Boolean completed,
-			Date dateDueEnd, Date dateDueStart, Boolean searchByRoles,
-			Boolean searchByUserRoles, String[] taskNames,
-			Long workflowDefinitionId, Long[] workflowInstanceIds,
-			Pagination pagination, Sort[] sorts)
+	public Page<WorkflowTask> postWorkflowTasksPage(
+		Pagination pagination, Sort[] sorts,
+		WorkflowTasksBulkSelection workflowTasksBulkSelection)
 		throws Exception {
 
 		String assigneeClassName = null;
 
-		if (GetterUtil.getBoolean(searchByRoles)) {
+		if (GetterUtil.getBoolean(workflowTasksBulkSelection.getSearchByRoles())) {
 			assigneeClassName =
 				com.liferay.portal.kernel.model.Role.class.getName();
 		}
@@ -237,21 +236,38 @@ public class WorkflowTaskResourceImpl extends BaseWorkflowTaskResourceImpl {
 			transform(
 				_workflowTaskManager.search(
 					contextCompany.getCompanyId(), contextUser.getUserId(),
-					assetTitle, taskNames, assetTypes, assetPrimaryKeys,
-					assigneeClassName, assigneeIds, dateDueStart, dateDueEnd,
-					completed, searchByUserRoles, workflowDefinitionId,
-					workflowInstanceIds,
-					GetterUtil.getBoolean(andOperator, true),
+					workflowTasksBulkSelection.getAssetTitle(),
+					workflowTasksBulkSelection.getTaskNames(),
+					workflowTasksBulkSelection.getAssetTypes(),
+					workflowTasksBulkSelection.getAssetPrimaryKeys(),
+					assigneeClassName, workflowTasksBulkSelection.getAssigneeIds(),
+					workflowTasksBulkSelection.getDateDueStart(),
+					workflowTasksBulkSelection.getDateDueEnd(),
+					workflowTasksBulkSelection.getCompleted(),
+					workflowTasksBulkSelection.getSearchByUserRoles(),
+					workflowTasksBulkSelection.getWorkflowDefinitionId(),
+					workflowTasksBulkSelection.getWorkflowInstanceIds(),
+					GetterUtil.getBoolean(
+						workflowTasksBulkSelection.getAndOperator(), true),
 					pagination.getStartPosition(), pagination.getEndPosition(),
 					_toOrderByComparator((Sort)ArrayUtil.getValue(sorts, 0))),
 				this::_toWorkflowTask),
 			pagination,
 			_workflowTaskManager.searchCount(
 				contextCompany.getCompanyId(), contextUser.getUserId(),
-				assetTitle, taskNames, assetTypes, assetPrimaryKeys,
-				assigneeClassName, assigneeIds, dateDueStart, dateDueEnd,
-				completed, searchByUserRoles, workflowDefinitionId,
-				workflowInstanceIds, GetterUtil.getBoolean(andOperator, true)));
+				workflowTasksBulkSelection.getAssetTitle(),
+				workflowTasksBulkSelection.getTaskNames(),
+				workflowTasksBulkSelection.getAssetTypes(),
+				workflowTasksBulkSelection.getAssetPrimaryKeys(),
+				assigneeClassName, workflowTasksBulkSelection.getAssigneeIds(),
+				workflowTasksBulkSelection.getDateDueStart(),
+				workflowTasksBulkSelection.getDateDueEnd(),
+				workflowTasksBulkSelection.getCompleted(),
+				workflowTasksBulkSelection.getSearchByUserRoles(),
+				workflowTasksBulkSelection.getWorkflowDefinitionId(),
+				workflowTasksBulkSelection.getWorkflowInstanceIds(),
+				GetterUtil.getBoolean(
+					workflowTasksBulkSelection.getAndOperator(), true)));
 	}
 
 	@Override
